@@ -153,13 +153,14 @@ func (l *HandlerManagedExporter) Init(snc *Agent, conf *ConfigSection, _ *Config
 		l.agentUser = agentUser
 	}
 
-	uri, err := url.Parse("http://" + l.agentAddress + "/metrics")
-	if err != nil {
-		return fmt.Errorf("cannot parse agent url: %s", err.Error())
-	}
-
 	l.proxy = &httputil.ReverseProxy{
 		Rewrite: func(pr *httputil.ProxyRequest) {
+			prefix := strings.TrimSuffix(l.urlPrefix, "/")
+			proxyUrl := "http://" + l.agentAddress + strings.TrimPrefix(pr.In.URL.Path, prefix)
+			if len(pr.In.URL.Query()) > 0 {
+				proxyUrl = proxyUrl + "?" + pr.In.URL.Query().Encode()
+			}
+			uri, _ := url.Parse(proxyUrl)
 			pr.Out.URL = uri
 		},
 		ErrorHandler: getReverseProxyErrorHandlerFunc(l.Type()),
@@ -187,8 +188,9 @@ func (l *HandlerManagedExporter) CheckPassword(req *http.Request, _ URLMapping) 
 }
 
 func (l *HandlerManagedExporter) GetMappings(*Agent) []URLMapping {
+	prefix := strings.TrimSuffix(l.urlPrefix, "/")
 	return []URLMapping{
-		{URL: l.urlPrefix + "/metrics", Handler: l.proxy},
+		{URL: prefix + "/*", Handler: l.proxy},
 	}
 }
 
